src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Business Operations Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Development Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>C4G_Lead_Parent_Story__c</fullName>
        <description>User submitted parent story content from the Parents: Share Your Story Pardot form.</description>
        <inlineHelpText>User submitted parent story content from the Parents: Share Your Story Pardot form.</inlineHelpText>
        <label>Parent Story</label>
        <length>65535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CFG_InterestCourseTitle__c</fullName>
        <label>Interest: Client Describes Course Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFG_InterestOtherContent__c</fullName>
        <label>Interest: Other Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFG_InterestTechnicalAsstServices__c</fullName>
        <label>Interest: Client describes TA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFG_PDInterest__c</fullName>
        <label>PD Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PD_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_ParticipantDisciplines__c</fullName>
        <label>Participant: Disciplines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physical Health</fullName>
                </value>
                <value>
                    <fullName>Infant and Early Childhood Mental Health</fullName>
                </value>
                <value>
                    <fullName>Child Welfare and Social Services</fullName>
                </value>
                <value>
                    <fullName>Early Identification and Intervention</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Education</fullName>
                </value>
                <value>
                    <fullName>Other - Write In (Required)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsExpectedNumber__c</fullName>
        <label>Participants: Expected Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsOtherDiscipline__c</fullName>
        <label>Participants: Other Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsOtherRole__c</fullName>
        <label>Participants: Other Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFG_ParticipantsOtherSettings__c</fullName>
        <label>Participants: Other Settings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFG_ProfessionalRole__c</fullName>
        <label>Participants: Professional Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Participants_Professional_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFG_ScheduleDateRequired__c</fullName>
        <label>Schedule: Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFG_ScheduleSpecificDateRequired__c</fullName>
        <label>Schedule: Specific Date Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Schedule_Specific_Date_Required</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_m_interested_in__c</fullName>
        <label>I'm interested in...</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Foundations and Theoretical Perspectives in Infant and Early Childhood Mental Health (IECMH)</fullName>
                </value>
                <value>
                    <fullName>Reflective Practice and Reflective Supervision</fullName>
                </value>
                <value>
                    <fullName>Infant and Early Childhood Development</fullName>
                </value>
                <value>
                    <fullName>Neuro-Relational Development</fullName>
                </value>
                <value>
                    <fullName>The Psychology of Pregnancy and Early Parenthood</fullName>
                </value>
                <value>
                    <fullName>Supporting Children and Families Around Developmental Disorders/Disabilities</fullName>
                </value>
                <value>
                    <fullName>Trauma Informed Practice</fullName>
                </value>
                <value>
                    <fullName>Observation and Assessment in Infancy/Toddlerhood</fullName>
                </value>
                <value>
                    <fullName>Case Formulation and Relationship-Based Interventions</fullName>
                </value>
                <value>
                    <fullName>Systems and Public Health Approach to IECMH</fullName>
                </value>
                <value>
                    <fullName>DC:0-5™ Training for Clinicians</fullName>
                </value>
                <value>
                    <fullName>Critical Competencies Virtual Conference Sessions (synchronous)</fullName>
                </value>
                <value>
                    <fullName>Critical Competencies Virtual Coaching Program (synchronous and asynchronous learner experiences)</fullName>
                </value>
                <value>
                    <fullName>Critical Competencies Online Course and Micro-Courses (asynchronous)</fullName>
                </value>
                <value>
                    <fullName>Critical Competencies Virtual Intentional Teaching Series (synchronous and asynchronous learner experiences)</fullName>
                </value>
                <value>
                    <fullName>Critical Competencies Virtual Training of Trainers (ToT) and Certification (synchronous and asynchronous learner experiences)</fullName>
                </value>
                <value>
                    <fullName>DC:0-5 Overview</fullName>
                </value>
                <value>
                    <fullName>DC:0-5 Clinical Training Institute</fullName>
                </value>
                <value>
                    <fullName>DC:0-5 Certified Training of Trainers (ToT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_m_interested_in_fill_in_blank__c</fullName>
        <label>I’m interested in [fill in blank].</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>I_m_looking_for_training_for_check_all__c</fullName>
        <label>I’m looking for training for (check all</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinicians</fullName>
                </value>
                <value>
                    <fullName>Supervisors</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Educators</fullName>
                </value>
                <value>
                    <fullName>General Early Childhood Practitioners</fullName>
                </value>
                <value>
                    <fullName>Trainers, Faculty and Adult Educators</fullName>
                </value>
                <value>
                    <fullName>Coaches</fullName>
                </value>
                <value>
                    <fullName>Infant-Toddler Educators and Program Leaders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_want_to_learn_more_about__c</fullName>
        <label>I want to learn more about...</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Institutional subscription</fullName>
                </value>
                <value>
                    <fullName>Advertising opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestCCInfantToddlerEdOnline__c</fullName>
        <label>Interest: CC Infant Toddler Ed Online</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Micro-Course, Area 1: Supporting Social-Emotional Development</fullName>
                </value>
                <value>
                    <fullName>Micro-Course, Area 2: Supporting Cognitive Development</fullName>
                </value>
                <value>
                    <fullName>Micro-Course, Area 3: Supporting Language and Literacy Development</fullName>
                </value>
                <value>
                    <fullName>Full Course, Areas 1, 2, and 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestCrossSectorCCOnline__c</fullName>
        <label>Interest: Cross Sector CC Online</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Cross_Sector_CC_Online</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestDC0to5__c</fullName>
        <label>Interest: DC 0 to 5</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_DC_0_to_5</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestNurturingChildWellBeing__c</fullName>
        <label>Interest: Nurturing Child Well Being</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Nurturing_Child_Well_Being</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestTheGrowingBrain__c</fullName>
        <label>Interest: The Growing Brain</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_The_Growing_Brain</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Competencies__c</fullName>
        <label>Interest: Competencies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Competencies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Curricula_Programs__c</fullName>
        <label>Interest:CC Infant Toddler Educators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Curricula_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Formats__c</fullName>
        <label>Interest: Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Formats</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Topical_Sessions__c</fullName>
        <label>Interest: Topical Sessions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest_Topical_Sessions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_Bulk_Sale__c</fullName>
        <label>Interested: Bulk Sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10-100 items</fullName>
                </value>
                <value>
                    <fullName>100-500 items</fullName>
                </value>
                <value>
                    <fullName>500+ items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_training_attendees_optional__c</fullName>
        <label>Number of training attendees (optional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParticipantSettings__c</fullName>
        <label>Participant: Settings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Participant_Settings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>When_would_you_like_the_training_to_occu__c</fullName>
        <label>When would you like the training to occu</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Conversion_Chance__c</fullName>
        <label>Conversion Chance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_InterestCurriculaPrograms__c</fullName>
        <label>Interest: Curricula Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cfg_Interest_Curricula_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_InterestPotentialFutureOfferings__c</fullName>
        <label>Interest: Potential Future Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cfg_Interest_Potential_Future_Offerings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Domains__c</fullName>
        <label>Interest - Domains</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Childhood Development</fullName>
                </value>
                <value>
                    <fullName>Family-Centered Practice</fullName>
                </value>
                <value>
                    <fullName>Relationship-Based Practices</fullName>
                </value>
                <value>
                    <fullName>Health and Development Risk and Protective Factors</fullName>
                </value>
                <value>
                    <fullName>Cultural and Linguistic Responsiveness</fullName>
                </value>
                <value>
                    <fullName>Leadership to Meet Family Needs and Improve Services and Systems</fullName>
                </value>
                <value>
                    <fullName>Professional and Ethical Practices</fullName>
                </value>
                <value>
                    <fullName>Service Planning, Coordination, and Collaboration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Formats_Online__c</fullName>
        <label>Interest - Formats Online</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Conference Library</fullName>
                </value>
                <value>
                    <fullName>Web Meeting Facilitation or Presentation (less than 1.5 hours)</fullName>
                </value>
                <value>
                    <fullName>Online Lessons and/or Courses</fullName>
                </value>
                <value>
                    <fullName>Online Learning Community/Community of Practice (CoP) Facilitation</fullName>
                </value>
                <value>
                    <fullName>Online Reflective Follow-Up Session (less than 1.5 hours)</fullName>
                </value>
                <value>
                    <fullName>Technical Assistance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Formats__c</fullName>
        <label>Interest - Formats Onsite</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conference or Meeting Presentation(s) (less than 1.5 hours)</fullName>
                </value>
                <value>
                    <fullName>Conference or Meeting Sessions (more than 1.5 hours)</fullName>
                </value>
                <value>
                    <fullName>Keynote(s)</fullName>
                </value>
                <value>
                    <fullName>Half-Day training (3 hours)</fullName>
                </value>
                <value>
                    <fullName>Full-Day Training (6 hours)</fullName>
                </value>
                <value>
                    <fullName>Training Series (multiple days)</fullName>
                </value>
                <value>
                    <fullName>Reflective Follow-Up Session (3-6 hours)</fullName>
                </value>
                <value>
                    <fullName>Learning Community/Community of Practice (CoP) Facilitation</fullName>
                </value>
                <value>
                    <fullName>Training of Trainers</fullName>
                </value>
                <value>
                    <fullName>Trainer Certification</fullName>
                </value>
                <value>
                    <fullName>Training of Facilitators (e.g., to lead CoPs)</fullName>
                </value>
                <value>
                    <fullName>Faculty Institutes</fullName>
                </value>
                <value>
                    <fullName>Technical Assistance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Sessions__c</fullName>
        <label>Interest - Sessions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brain Development</fullName>
                </value>
                <value>
                    <fullName>Early Language and Literacy Development</fullName>
                </value>
                <value>
                    <fullName>Foundations of School Readiness</fullName>
                </value>
                <value>
                    <fullName>Importance of Play</fullName>
                </value>
                <value>
                    <fullName>Responding to Challenging Behaviors in Infants and Toddlers</fullName>
                </value>
                <value>
                    <fullName>Social and Emotional Development</fullName>
                </value>
                <value>
                    <fullName>Supporting Early Science, Technology, Engineering and Math (STEM) Skills with Infants, Toddlers and Their Families</fullName>
                </value>
                <value>
                    <fullName>Understanding Temperament</fullName>
                </value>
                <value>
                    <fullName>Building Collaborative Relationships with Families</fullName>
                </value>
                <value>
                    <fullName>Coaching and Engaging Families in Early Intervention Services</fullName>
                </value>
                <value>
                    <fullName>Factors that Affect Attachment</fullName>
                </value>
                <value>
                    <fullName>Relationship-Based and Reflective Coaching and Mentoring</fullName>
                </value>
                <value>
                    <fullName>Reflective Supervision</fullName>
                </value>
                <value>
                    <fullName>Relationship-Based and Reflective Organizations</fullName>
                </value>
                <value>
                    <fullName>Foundations of Infant and Early Childhood Mental Health</fullName>
                </value>
                <value>
                    <fullName>Infants and Young Children with Special Needs</fullName>
                </value>
                <value>
                    <fullName>Trauma and Toxic Stress</fullName>
                </value>
                <value>
                    <fullName>Trauma Informed Practice</fullName>
                </value>
                <value>
                    <fullName>Cultural Context for Parenting and Early Childhood</fullName>
                </value>
                <value>
                    <fullName>Supporting Dual-Language Learners</fullName>
                </value>
                <value>
                    <fullName>Coming Together Around Military Families - Duty to Care: Supporting Young Children through Challenging Times</fullName>
                </value>
                <value>
                    <fullName>Systems of Support for Early Childhood Educators</fullName>
                </value>
                <value>
                    <fullName>Infant and Early Childhood Mental Health Consultation and Coaching</fullName>
                </value>
                <value>
                    <fullName>Community of Practice Facilitation</fullName>
                </value>
                <value>
                    <fullName>Core Components of Safe Babies Court Teams, including Parent-Child Contact and Concurrent Planning</fullName>
                </value>
                <value>
                    <fullName>Enrolling Families and Maintaining Parent Engagement in Home-Visiting Programs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Possible_Date_of_Training__c</fullName>
        <label>Possible Date of Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Educational Institution</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Business_Ops</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Business_Operations_Lead</value>
        </filters>
        <label>Business Ops</label>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Queue</label>
        <queue>Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Operations_Lead</fullName>
        <active>true</active>
        <businessProcess>Business Operations Lead Process</businessProcess>
        <label>Business Operations Lead</label>
        
        
        
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Development_Lead</fullName>
        <active>true</active>
        <businessProcess>Development Lead Process</businessProcess>
        <label>Development Lead</label>
        
        
        
        
        
        
        
        
    </recordTypes>
    <recordTypes>
        <fullName>Policy_Lead_Care2</fullName>
        <active>true</active>
        <businessProcess>Development Lead Process</businessProcess>
        <label>Policy Lead(Care2)</label>
        
        
        
        
        
        
        
        
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>